--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -30,7 +30,12 @@ body {
 
 main {
   max-width: 1200px;
+  min-height: 800px;
+  background-color: rgb(249, 249, 249);
   width: 80%;
+  border-left: 1px solid rgb(201, 201, 201);
+  border-right: 1px solid rgb(201, 201, 201);
+  padding: 0px 15px;
   margin: 0 auto;
   margin-top: 50px;
   display: flex;
