--- a/src/views/contact.pug
+++ b/src/views/contact.pug
@@ -3,9 +3,8 @@ extends base
 block content 
     div
         div.pageName Contact Information
-        div 주소
-        div 전화번호
+        div under construction!
     div.separ
     div 
         div.pageName Location 
-            img(src="/")
+        div under construction!
