--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -5,11 +5,19 @@ header
         ul 
             li 
                 a(href="/") Home
+            li
             li 
                 a(href="/professor") Professor
+            li
+            li 
+                a(href="/research") Research Area
+            li
             li 
                 a(href="/members") Members
+            li
             li 
                 a(href="/publications") Publications
+            li
             li 
                 a(href="/contact") Contact
+            
