--- a/src/client/scss/components/header.scss
+++ b/src/client/scss/components/header.scss
@@ -1,6 +1,6 @@
 header {
   background-color: rgb(246, 246, 246);
-  height: 50px;
+  height: 55px;
   padding: 0px 20px;
   display: flex;
   justify-content: space-between;
@@ -14,15 +14,30 @@ header {
     font-size: 25px;
     font-weight: 600;
   }
-  nav ul {
+  nav {
+    height: 100%;
     display: flex;
-    font-size: 15px;
-    li {
-      opacity: 0.7;
-      padding-left: 10px;
-      &:hover {
-        opacity: 1;
-        text-decoration: underline;
+    align-items: center;
+    ul {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      font-size: 15px;
+      li:nth-child(odd) {
+        opacity: 0.7;
+        padding: 0px 7px;
+        &:hover {
+          opacity: 1;
+          text-decoration: underline;
+        }
+      }
+      li:nth-child(even) {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 15px;
+        border: 1px solid rgb(141, 141, 141);
       }
     }
   }
