--- a/src/client/scss/screens/members.scss
+++ b/src/client/scss/screens/members.scss
@@ -2,11 +2,6 @@
   display: flex;
   height: 150px;
   flex-direction: row;
-  img {
-    border-radius: 5px;
-    width: 150px;
-    height: 150px;
-  }
   div {
     height: 100%;
     display: flex;
@@ -14,6 +9,7 @@
     padding-left: 20px;
     span {
       text-align: start;
+      margin-bottom: 5px;
     }
     :first-child {
       font-size: 20px;
