--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -26,18 +26,20 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: white;
+  height: 100%;
 }
 
 main {
   max-width: 1200px;
-  min-height: 800px;
+  min-height: 700px;
   background-color: rgb(249, 249, 249);
   width: 80%;
   border-left: 1px solid rgb(201, 201, 201);
   border-right: 1px solid rgb(201, 201, 201);
   padding: 0px 15px;
   margin: 0 auto;
-  margin-top: 50px;
+  margin-top: 60px;
+  padding-bottom: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
