--- a/src/views/mixins/member.pug
+++ b/src/views/mixins/member.pug
@@ -1,7 +1,7 @@
 mixin member(member)
     div.each_member
-        img(src="/uploads/"+member.pic)
         div
             span=member.name 
-            span=member.phone
+            span=member.process
+            span=member.email
     div.member_separ
